## Process this file with automake to produce Makefile.in

EXTRA_DIST= ChangeLog FAQ INDEX README algorithm.txt zlib.3 

noinst_LIBRARIES = libzlib.a

libzlib_a_SOURCES =	\
	adler32.c	\
	compress.c	\
	crc32.c		\
	deflate.c	\
	gzio.c		\
	infblock.c	\
	infcodes.c	\
	inffast.c	\
	inflate.c	\
	inftrees.c	\
	infutil.c	\
	trees.c		\
	uncompr.c	\
	zutil.c		\
	deflate.h   infcodes.h  inffixed.h  infutil.h   zconf.h     zutil.h	\
	infblock.h  inffast.h   inftrees.h  trees.h     zlib.h
